--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,5 @@ tmp/
 # app config (local only)
 services/users/config/defaults.yaml
 services/orders/config/defaults.yaml
+services/outboxer/config/defaults.yaml
 
