Checkout-Gateway added

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,7 @@ services/users/config/defaults.yaml
 services/orders/config/defaults.yaml
 services/outboxer/config/defaults.yaml
 services/payments/config/defaults.yaml
+services/gateway/config/defaults.yaml
+
 
 
