--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ services/orders/config/defaults.yaml
 services/outboxer/config/defaults.yaml
 services/payments/config/defaults.yaml
 services/gateway/config/defaults.yaml
+services/opsassistant/config/defaults.yaml
 
 
 
