--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -1,6 +1,45 @@
-version: "3.8"
-
 services:
+
+  postgres16:
+    image: postgres:16-alpine
+    container_name: postgres-16
+    environment:
+      POSTGRES_USER: goshop
+      POSTGRES_PASSWORD: goshop
+      POSTGRES_DB: goshop
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U goshop -d goshop"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - pg16data:/var/lib/postgresql/data
+    networks:
+      kafka-net:
+        aliases:
+          - postgres16
+          - postgres-16
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    container_name: redis-7
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+    volumes:
+      - redis_data:/data
+    networks:
+      kafka-net:
+        aliases: [redis, redis-7]
+    restart: unless-stopped
+
   zookeeper:
     image: bitnami/zookeeper:3.9.2
     container_name: zookeeper
@@ -16,7 +55,9 @@ services:
       retries: 12
     volumes:
       - zookeeper_data:/bitnami/zookeeper
-    networks: [kafka-net]
+    networks:
+      kafka-net:
+        aliases: [zookeeper]
     restart: unless-stopped
 
   kafka:
@@ -26,23 +67,20 @@ services:
       zookeeper:
         condition: service_healthy
     environment:
-      # ZooKeeper-режим
       - KAFKA_ENABLE_KRAFT=no
       - KAFKA_BROKER_ID=1
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
 
-      # ДВА листенера: внутренний (PLAINTEXT) и внешний (EXTERNAL)
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,EXTERNAL://:29092
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:29092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
 
-      # В проде правильней false; топики создаём через kafka-init
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
     ports:
-      - "9092:9092"     # для контейнеров/health внутри моста — не обязателен наружу, но оставим
-      - "29092:29092"   # стабильная точка снаружи: localhost:29092
+      - "9092:9092"
+      - "29092:29092"
     healthcheck:
       test: ["CMD", "bash", "-lc", "/opt/bitnami/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list >/dev/null 2>&1"]
       interval: 5s
@@ -50,7 +88,9 @@ services:
       retries: 20
     volumes:
       - kafka_data:/bitnami/kafka
-    networks: [kafka-net]
+    networks:
+      kafka-net:
+        aliases: [kafka]
     restart: unless-stopped
 
   kafka-init:
@@ -75,5 +115,7 @@ networks:
   kafka-net: {}
 
 volumes:
+  pg16data: {}
   zookeeper_data: {}
   kafka_data: {}
+  redis_data: {}
