--- a/docker-compose.logs.yml
+++ b/docker-compose.logs.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.15.3
@@ -29,7 +27,7 @@ services:
       - ./observability/parsers_custom.conf:/fluent-bit/etc/parsers_custom.conf:ro
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - TZ=Europe/Berlin
+      - TZ=Europe/Moscow
     pid: "host"
     restart: unless-stopped
 
