--- a/observability/fluent-bit.conf
+++ b/observability/fluent-bit.conf
@@ -32,16 +32,31 @@
     Preserve_Key Off
 
 [FILTER]
+    Name         parser
+    Match        containers.*
+    Key_Name     path
+    Parser       docker_path
+    Reserve_Data On
+    Preserve_Key On
+
+[FILTER]
     Name    modify
     Match   containers.*
-    Copy    time @timestamp
-    Copy    msg  message
-    Copy    level log.level
-    Copy    app   service.name
-    Copy    env   service.environment
-    Copy    host  host.name
-    Copy    pid   process.pid
+    Copy    time          @timestamp
+    Copy    msg           message
+    Copy    level         log.level
+    Copy    app           service.name
+    Copy    env           service.environment
+    Copy    host          host.name
+    Copy    pid           process.pid
+    Copy    container_id  container.id
+    Copy    container_id  container.name
     Remove  stream
+
+[FILTER]
+    Name   grep
+    Match  containers.*
+    Exclude service.name ^ES_ECS$
 
 [OUTPUT]
     Name                es
@@ -54,6 +69,7 @@
     Time_Key            @timestamp
     Time_Key_Nanos      On
     Replace_Dots        On
+    Suppress_Type_Name  On
 
 [OUTPUT]
     Name   stdout
