--- a/docker-compose.gateway.yml
+++ b/docker-compose.gateway.yml
@@ -11,6 +11,8 @@ services:
       orders: { condition: service_healthy }
     ports:
       - "7071:7070"
+    expose:
+      - "2112"
     healthcheck:
       test: ["CMD", "grpc_health_probe", "-addr=127.0.0.1:7070", "-connect-timeout=1s", "-rpc-timeout=1s"]
       interval: 5s
